# examples

ajax--notes/: README.md  index.html  package.json  script.js  style.css
bear-says/: index.html  main.js  styles.css
bears-html/: README.md  facts.html  index.html  species.html
css-flexbox/: index.html  style.css
debugging-practice/: index.html  main.js
django--recipes/: pyproject.toml
django--recipes/recipebook/: settings.py  urls.py
django--recipes/recipes/: admin.py  forms.py  models.py  views.py
django--recipes/templates/: base.html
django--recipes/templates/recipes/: add_recipe.html  recipe_detail.html  recipe_list.html
django-uptact/: README.md
dom-acme/: index.html  main.js  style.css
fetch-github-api/: index.html  main.js
forms-are-fine/: index.html  script.js  style.css
garden-store-css/: index.html  style.css
js-game-design/: pixel-wars-crc.md
oo-number-guessing-game/: index.html  main.js  style.css
python-mystery-word-oo/: mystery_word.py
python-notebooks/: 01 - The Jupyter Notebook.ipynb  02 - Simple Values and Variables.ipynb  03 - Input and Output.ipynb  04 - Conditionals and Loops.ipynb  05 - Functions.ipynb  06 - Sequences.ipynb  07 - String Methods.ipynb  08 - Dictionaries.ipynb  09 - Working with Files.ipynb  10 - Sorting and Using Functions as Arguments.ipynb  11 - Comprehensions and Sets.ipynb  12 - Modules.ipynb  14 - Exceptions.ipynb  15 - Classes and Objects.ipynb  16 - Object-Oriented Design.ipynb
python-pig/: pig.py
python-word-frequency/: word_frequency.py
simple-game-starter/: index.html  keyboard.js  (+1 more)
(+20 files in other folders)
